--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Modern Responsive Website with HTML5, CSS3 and Bootstrap",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "node node_modules/webpack/bin/webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,7 +24,14 @@
   },
   "homepage": "https://github.com/Fendoro/vesco",
   "dependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "bootstrap": "^3.3.7",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
-    "webpack": "^3.3.0"
+    "webpack": "^3.3.0",
+    "wowjs": "^1.1.3"
   }
 }
