--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Modern Responsive Website with HTML5, CSS3 and Bootstrap",
   "main": "index.js",
   "scripts": {
-    "build": "node node_modules/webpack/bin/webpack --config webpack.config.js",
+    "build": "node node_modules/webpack/bin/webpack --watch --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,9 +29,15 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "bootstrap": "^3.3.7",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "magnific-popup": "^1.1.0",
+    "owl.carousel": "^2.2.0",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.3.0",
     "wowjs": "^1.1.3"
   }
