--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "file-loader": "^0.11.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "jquery.counterup": "^2.1.0",
     "magnific-popup": "^1.1.0",
     "owl.carousel": "^2.2.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
+    "waypoints": "^4.0.1",
     "webpack": "^3.3.0",
     "wowjs": "^1.1.3"
   }
