--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jquery.counterup": "^2.1.0",
+    "jquery.easing": "^1.4.1",
     "magnific-popup": "^1.1.0",
     "owl.carousel": "^2.2.0",
     "style-loader": "^0.18.2",
